service/user/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
  namespace: app-0
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  selector:
    matchLabels:
      app: user
  replicas: 2 
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
      - name: user
        image: registry.cn-shanghai.aliyuncs.com/logic-base/user:v1.0.10
        imagePullPolicy: Always
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
        volumeMounts:
        - name: secret-jwt
          mountPath: /etc/app-0/secret-jwt
          readOnly: true
        - name: secret-crdb-ca-crt
          mountPath: /etc/app-0/secret-crdb-ca-crt
          readOnly: true
        - name: config-crdb
          mountPath: /etc/app-0/config-crdb
          readOnly: true
        - name: config-minio
          mountPath: /etc/app-0/config-minio
          readOnly: true
        - name: config-user
          mountPath: /etc/app-0/config-user
          readOnly: true
      volumes:
        - name: secret-jwt
          secret:
            secretName: secret-jwt
            optional: false # 默认设置，意味着 secret 必须已经存在
        - name: secret-crdb-ca-crt
          secret:
            secretName: secret-crdb-ca-crt
            optional: false 
        - name: config-crdb
          configMap:
            name: config-crdb
            optional: false 
        - name: config-minio
          configMap:
            name: config-minio
            optional: false 
        - name: config-user
          configMap:
            name: config-user
